force-app/main/default/objects/Order/fields/Bill_To_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_ID__c</fullName>
    <formula>Bill_To_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account ID</label>
    <type>Text</type>
</CustomField>