force-app/main/default/objects/Order/fields/Clio_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Clio_Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value taken from Quote</description>
    <label>Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>