force-app/main/default/objects/Order/fields/Clio_First_invoice_date__c.field-meta.xml
<CustomField>
    <fullName>Clio_First_invoice_date__c</fullName>
    <description>This field indicates the first day the invoice is sent / start for the customer. Automatically copied from the Quote object.</description>
    <label>First Invoice date</label>
    <type>Date</type>
</CustomField>