force-app/main/default/objects/Order/fields/Count_Order__c.field-meta.xml
<CustomField>
    <fullName>Count_Order__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>