force-app/main/default/objects/Order/fields/Deal_Desk_Order_Checked__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Order_Checked__c</fullName>
    <label>Deal Desk Order Checked</label>
    <type>Date</type>
</CustomField>