force-app/main/default/objects/Order/fields/Invoice_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Check_Date__c</fullName>
    <label>Invoice Check Date</label>
    <type>Date</type>
</CustomField>