force-app/main/default/objects/Order/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to check sync with Navision &amp; Rapidi 2020 feb</description>
    <label>Item</label>
    <type>Checkbox</type>
</CustomField>