force-app/main/default/objects/Order/fields/Minimum_Discount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Discount__c</fullName>
    <description>Used as a filter in the NAV Integration. Looks at the Custom Object &quot;Invoice Line&quot; to see if there is a negative discount value.</description>
    <inlineHelpText>Finds the minimum discount value from the related object Invoice Line.</inlineHelpText>
    <label>Minimum Discount</label>
    <summarizedField>Invoice_Line__c.Total_Discount_incl_Partner__c</summarizedField>
    <summaryForeignKey>Invoice_Line__c.Order__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>