force-app/main/default/objects/Order/fields/Municipality_Order__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Municipality Order</label>
    <type>Checkbox</type>
</CustomField>