force-app/main/default/objects/Order/fields/NAV_BO_Number_Manual__c.field-meta.xml
<CustomField>
    <fullName>NAV_BO_Number_Manual__c</fullName>
    <description>Field to substitue in the BO number from NAV for orders that were activated before when SF/NAV integration was live.</description>
    <inlineHelpText>Field to substitue in the BO number from NAV for orders that were activated before when SF/NAV integration was live.</inlineHelpText>
    <label>NAV Blanket Order No. Manual</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>