force-app/main/default/objects/Order/fields/NAV_Difference_of_Sums__c.field-meta.xml
<CustomField>
    <fullName>NAV_Difference_of_Sums__c</fullName>
    <description>NAV integration - Temporary fix to integration fail due to min price causing Partner price &gt; List Price</description>
    <formula>NAV_Sum_of_List__c - NAV_Sum_of_Partner_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference of Sums</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>