force-app/main/default/objects/Order/fields/NAV_Language_Code__c.field-meta.xml
<CustomField>
    <fullName>NAV_Language_Code__c</fullName>
    <description>Use for Navision integration</description>
    <inlineHelpText>Use for Navision integration</inlineHelpText>
    <label>Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DK</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>