force-app/main/default/objects/Order/fields/NAV_No__c.field-meta.xml
<CustomField>
    <fullName>NAV_No__c</fullName>
    <description>Use for Navision integration, Unique ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Use for Navision integration, Unique ID</inlineHelpText>
    <label>NAV Blanket Order No.</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>