force-app/main/default/objects/Order/fields/NAV_Pause_Integration__c.field-meta.xml
<CustomField>
    <fullName>NAV_Pause_Integration__c</fullName>
    <inlineHelpText>If this field is NOT BLANK, the Order and Invoice Lines WILL NOT be sent to NAV</inlineHelpText>
    <label>NAV Pause Integration</label>
    <type>Date</type>
</CustomField>