force-app/main/default/objects/Order/fields/NAV_Sum_of_Partner_ACV__c.field-meta.xml
<CustomField>
    <fullName>NAV_Sum_of_Partner_ACV__c</fullName>
    <description>NAV integration - Temporary fix to integration fail due to min price causing Partner price &gt; List Price</description>
    <label>Sum of Partner ACV</label>
    <summarizedField>Invoice_Line__c.NAV_Sum_of_Partner_ACV__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line__c.NAV_Sum_of_Partner_ACV__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>