force-app/main/default/objects/Order/fields/Opportunity_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Won__c</fullName>
    <formula>Opportunity.IsWon</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Won</label>
    <type>Checkbox</type>
</CustomField>