force-app/main/default/objects/Order/fields/Order_ID_18_character__c.field-meta.xml
<CustomField>
    <fullName>Order_ID_18_character__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order ID 18-character</label>
    <type>Text</type>
</CustomField>