force-app/main/default/objects/Order/fields/Sent_for_Invoicing_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_Invoicing_Date_Stamp__c</fullName>
    <label>Sent for Invoicing Date Stamp</label>
    <type>Date</type>
</CustomField>