force-app/main/default/objects/Order/fields/ShipToContactId__c.field-meta.xml
<CustomField>
    <fullName>ShipToContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Contact (NAV)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>