force-app/main/default/objects/Order/fields/Yearly_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Order_Value__c</fullName>
    <formula>Opportunity.Clio_Yearly_Opportunity_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>