force-app/main/default/objects/Order/listViews/All_Activated_Orders_Last_Week.listView-meta.xml
<ListView>
    <fullName>All_Activated_Orders_Last_Week</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>NAV_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>ORDERS.ACTIVATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Sent for Invoicing</value>
    </filters>
    <label>All Activated Orders - Last Week</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>